--- a/Groceries-App-Backend/src/main/resources/templates/login.html
+++ b/Groceries-App-Backend/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
             min-height: 100vh;
         }
         body {
-            display: flex;
+            displayService: flex;
             align-items: center;
             justify-content: center;
             min-height: 100vh;
@@ -65,14 +65,14 @@
             color: var(--alert-success-text);
         }
         form {
-            display: flex;
+            displayService: flex;
             flex-direction: column;
             align-items: center;
         }
         form > div {
             width: 100%;
             margin-bottom: 1rem;
-            display: flex;
+            displayService: flex;
             flex-direction: column;
             align-items: center;
         }
@@ -80,7 +80,7 @@
             font-size: 1rem;
             color: var(--text-main);
             width: 100%;
-            display: flex;
+            displayService: flex;
             flex-direction: column;
             align-items: flex-start;
         }
